# Backend

./: .gitignore
Portal.FrontServices/: Portal.FrontServices.csproj  Program.cs  Startup.cs  WeatherForecast.cs
Portal.FrontServices/Controllers/: HealthController.cs
Portal.FrontServices/Portal.Abstract/: Class1.cs
Portal.FrontServices/Portal.Services/: HealthService.cs  Portal.Services.csproj
back/: Cargo.toml  build.rs
back/check/: Cargo.toml
back/health/: Cargo.toml
back/health/src/: lib.rs
back/proto/: health.proto
backend/check/: Cargo.toml
backend/check/src/services/: health_server.rs  mod.rs
backend/health/: Cargo.toml  build.rs
backend/health/src/: lib.rs
backend/health/src/api/: mod.rs  portal.health.rs
backend/store/: Cargo.toml  build.rs
backend/store/proto/: product.proto
backend/store/src/: main.rs
backend/store/src/api/: mod.rs  portal.store.product.rs
backend/user/: Cargo.toml
frontend/: Program.cs  Startup.cs  WeatherForecast.cs
frontend/Controllers/: HealthController.cs
frontend/Services/: HealthService.cs
gateway/: Portal.Gateway.sln
gateway/Portal.Abstract/: IHealthService.cs
gateway/Portal.Gateway/: Portal.Gateway.csproj  Program.cs  Startup.cs
gateway/Portal.Gateway/Controllers/: HealthController.cs
gateway/Portal.Gateway/Properties/: launchSettings.json
gateway/Portal.Services/: HealthService.cs  Portal.Services.csproj
